--- a/styles.css
+++ b/styles.css
@@ -140,6 +140,7 @@
     grid-row-gap: 0.5rem;
     margin: 0 auto;
     width: 100%;
+    text-align: center;
   }
   
   @media (min-width: 50rem) {
